--- a/Spring/Assignment/src/main/resources/application.properties
+++ b/Spring/Assignment/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/testDB
+server.PORT=8001
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=root
 spring.datasource.password=2024
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-server.port=8080
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl.auto=create
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+
 
