--- a/Spring/Assignment/src/main/resources/application.properties
+++ b/Spring/Assignment/src/main/resources/application.properties
@@ -1,12 +1,9 @@
-server.PORT=8001
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.url=jdbc:mysql://db:3306/testdb
+
 spring.datasource.username=root
+
 spring.datasource.password=2024
 
+spring.jpa.hibernate.ddl-auto = update
+
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl.auto=create
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-
-
-
